package io.hedwig.dp.demos.creation.factoryMethod;

/**
 * 1. author: patrick
 */
public interface LoggerFactory {
  Logger createLogger();
}
